# Education_Assistance_Application

./: CMakeLists.txt  basicClass.h  clock.h  connect.cpp  customEvent.cpp  customEvent.h  customObject.h  graph.cpp  graph.h  identity.h  main.cpp  server.cpp
client/: client.pro  clock.cpp  clock.h  customScrollContainer.cpp  customScrollContainer.h  customWidgets.cpp  customWidgets.h  icon.qrc  loginpage.cpp  loginpage.h  main.cpp  mainpage.cpp  mainpage.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  slidepage.cpp  slidepage.h
data_structure/: heap copy.cpp  heap.cpp  heap.h  string.cpp  string.h
default_settings/: class.in
huffman/: decoder.cpp  decoder.h
server 2/: basicClass.cpp  basicClass.h  connect.cpp  connect.h  customEvent.cpp  customEvent.h  customObject.cpp  customObject.h  graph.cpp  graph.h  identity.cpp  (+4 more)
sourcecode/server/: CMakeLists.txt  activitypage.cpp  activitypage.h  basicClass.cpp  basicClass.h  client.pro.user.4f1f8fd  clock.cpp  clock.h  connect.cpp  connect.h  customEvent.cpp  customEvent.h  customObject.cpp  customObject.h  customScrollContainer.cpp  customWidgets.cpp  global.h  graph.cpp  graph.h  identity.h  main.cpp  mainpage.cpp  mainpage.h  mainwindow.cpp  mycanvas.cpp  mycanvas.h  run.txt  server.cpp  server.h  sha256.cpp  sha256.h  slidepage.h  specifiedWidgets.h  test  timeHeap.h
sourcecode/server/data_structure/: heap.cpp  heap.h  rbtree.h  string.cpp  string.h  test  vector.cpp  vector.h
sourcecode/server/default_settings/: activity.in  class.in  graph.in  student.in  time.in  traffic.in
sourcecode/server/default_settings_backup/: activity.in  teacher.in
sourcecode/server/huffman/: decoder.cpp  decoder.h  encoder.cpp  encoder.h  main.cpp
sourcecode/server/huffman/TestData/: test6.ans  test6.in
(+82 files in other folders)
